--- a/client/package.json
+++ b/client/package.json
@@ -31,11 +31,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "redux-mock-store": "^1.5.4",
+    "source-map-explorer": "^2.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
