--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "author": "Andrea Hernandez",
   "scripts": {
-    "start": "webpack serve --mode production",
-    "dev": "webpack serve --mode development",
+    "start": "webpack serve --mode development",
     "build": "webpack",
     "test": "jest --config jest.config.js --coverage --collectCoverageFrom"
   },
