--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,13 @@
   "private": true,
   "author": "Andrea Hernandez",
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "webpack serve --mode=development",
+    "dev": "webpack serve --mode=development",
     "build": "webpack",
     "test": "jest --config jest.config.js --coverage --collectCoverageFrom"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.23.6",
-    "@babel/runtime": "^7.23.6",
     "@reduxjs/toolkit": "^2.0.1",
-    "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -24,14 +22,16 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
+    "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@babel/runtime": "^7.23.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.9",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.4",
     "jest": "^29.7.0",
