--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "nyc --nycrc-path=.nycrc mocha src/test/** --exit",
     "lint": "eslint . --ext js --report-unused-disable-directives --max-warnings 0"
   },
